--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@types/gapi.auth2": "^0.0.56",
     "cors": "^2.8.5",
     "ng-gapi": "^0.0.94",
     "rxjs": "~7.5.0",
